# fastapicleanarchitectureddd

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  FastAPI.md  LICENSE  Makefile  README-Note.md  README-PTBR.md  README-TH.md  README-TH_V2.md  README.md  alembic.ini  docker-compose.yaml  manule.md  pyproject.toml  requirements.txt  reset_db.py  run.bat  run.ps1  seed_admin.py  setup.bat  setup.ps1  tmp_body.json  tmp_check.py  tmp_check2.py  tmp_check3.py
app/: app.py
app/core/: database.py  exception_handler.py  influxdb_client.py  key_management.py  logging.py  middleware.py  migrations.py  mqtt_client.py  redis.py  resources.py  security.py  settings.py  websocket_hub.py
app/core/queue/: __init__.py  manager.py  noop_queue.py
app/modules/authentication/application/: enums.py  interfaces.py  use_cases.py
app/modules/authentication/domain/: entities.py  mappers.py  value_objects.py
app/modules/authentication/infrastructure/: models.py  repositories.py
app/modules/authentication/presentation/: dependencies.py  docs.py  exceptions.py  routers.py  schemas.py
app/modules/batch/application/: use_case.py
app/modules/batch/infrastructure/: batch_repository.py
app/modules/batch/presentation/: router.py  schemas.py
app/modules/customer/application/: use_case.py
app/modules/customer/infrastructure/: car_repository.py  customer_repository.py
app/modules/customer/presentation/: router.py  schemas.py
app/modules/dashboard/application/: use_case.py
app/modules/dashboard/presentation/: router.py  schemas.py
app/modules/document/application/: use_case.py
app/modules/document/infrastructure/: document_repository.py
app/modules/document/presentation/: router.py  schemas.py
app/modules/email/application/: use_case.py
app/modules/email/infrastructure/: email_repository.py
app/modules/email/presentation/: router.py  (+1 more)
docs/: 00-migration-guide.md  00-project-overview.md  01-api-reference.md  01-database-setup.md  02-architecture-mapping.md  02-database-schema.md  03-api-endpoint-mapping.md  03-development-guide.md  04-module-dependency-graph.md
docs2/: plan2-file-details.md  plan2-python-implementation.md
migrations/: README.md  env.py  public.sql  public_feature_IoT.sql  public_feature_user.sql  script.py.mako
migrations/versions/: 2026_03_16_0048_f7ea2294d326.py  2026_03_16_0049_0a4bcd898bd2.py  2026_07_20_1424_e8990ecbe9c7.py  2026_07_20_1457_25845428d7a7.py  2026_07_20_2256_a9a05a7f432d.py  2026_07_21_1336_04e00cccb1c5.py  2026_07_21_1431_4586f82a4d7e.py
scripts/: db.py  directory_tree.py  generate_fernet.py  generate_secret.py  info.py
secrets/keys/: README.md
(+147 files in other folders)
