[project]
name = "fastapi-clean-architecture-ddd-template"
version = "1.0.0"
description = "Python FastAPI backend template, organized by Clean Architecture layers (domain, application, infrastructure, presentation) and DDD principles. Includes dependency management, Docker support, testing boilerplate, CI-friendly setup and best practices, modular scaffolding to jump-start new projects and ensure long-term maintainability."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.135.1",
    "hypercorn>=0.18.0",
    "jwcrypto>=1.5.6",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "py-automapper>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "stackprinter>=0.2.12",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
