[project]
name = "fastapi-ddd-app"
version = "0.1.0"
description = "FastAPI Clean Architecture and Domain-Driven Design Template"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "fastapi-cli>=0.0.24",
    "httpx>=0.28.1",
    "hypercorn>=0.18.0",
    "jwcrypto>=1.5.6",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "py-automapper>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "ruff>=0.15.4",
    "sentry-sdk>=2.54.0",
    "sqlalchemy>=2.0.48",
    "stackprinter>=0.2.12",
    "uvicorn>=0.41.0",
    "watchfiles>=1.1.1",
    "redis>=8.0.1",
]

[project.optional-dependencies]
windows = []
unix = [
    "uvloop>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
